--- a/argocd/applications/schoollab-app.yaml
+++ b/argocd/applications/schoollab-app.yaml
@@ -8,7 +8,7 @@ spec:
   source:
     repoURL: https://github.com/dawidmacias1/school-lab-k8s-manifests
     targetRevision: main
-    path: applications
+    path: applications/*
   destination:
     server: https://kubernetes.default.svc
     namespace: schoollab
