--- a/applications/main-service/ingress.yaml
+++ b/applications/main-service/ingress.yaml
@@ -7,8 +7,7 @@ metadata:
     app: main-service
 spec:
   rules:
-    - host: schoollab.local
-      http:
+    - http:
         paths:
           - path: /
             pathType: Prefix
